changes to avoid dark mode

--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -41,7 +41,7 @@ nav ul li {
   padding: 0 1rem 0 0;
 }
 
-.main-nav a {
+.main-nav a, .main-nav a:visited, .main-nav a:focus {
   border-bottom: 3px solid transparent;
   color: var(--color-gray-600);
   display: block;
